# db2ssh

./: .gitignore  README.md  ibm_db_ssh.py  pyproject.toml  run_sample_query_ssh.sh  ssh_query_runner.py
db2ssh/: __init__.py  cli.py
tests/: test_db2ssh.py
